--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,4 +19,4 @@ jobs:
       run: npm install -g newman
 
     - name: Run Postman Tests
-      run: newman run collections/Restful-booker.postman_collection.json
+      run: newman run collections/Restful-booker.postman_collection.json -e environments/Restful-booker.postman_environment.json
